apps/mdp-website/overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdp-website
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - website.poc.mdplabs.dev
      secretName: mdp-website-dev-tls
  rules:
    - host: website.poc.mdplabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mdp-website
                port:
                  number: 80
